--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -28,24 +28,30 @@ jobs:
             extra_apt_pkgs: gcc-8 g++-8
             os: ubuntu-20.04
             
-          - name: cmake:gcc9:ubuntu.20.04
+          - name: cmake:gcc9:ubuntu.22.04
             build_system: cmake
             c_compiler: gcc-9
             cxx_compiler: g++-9
-            os: ubuntu-20.04
+            os: ubuntu-22.04
             
-          - name: cmake:gcc10:ubuntu.20.04
+          - name: cmake:gcc10:ubuntu.22.04
             build_system: cmake
             c_compiler: gcc-10
             cxx_compiler: g++-10
-            os: ubuntu-20.04
+            os: ubuntu-22.04
             
-          - name: cmake:gcc11:ubuntu.20.04
+          - name: cmake:gcc11:ubuntu.22.04
             build_system: cmake
             c_compiler: gcc-11
             cxx_compiler: g++-11
-            extra_apt_pkgs: gcc-11 g++-11
-            os: ubuntu-20.04
+            os: ubuntu-22.04
+            
+          - name: cmake:gcc12:ubuntu.22.04
+            build_system: cmake
+            c_compiler: gcc-12
+            cxx_compiler: g++-12
+            extra_apt_pkgs: gcc-12 g++-12
+            os: ubuntu-22.04
             
     env:
       CC: ${{ matrix.c_compiler || 'gcc' }}
